--- a/projects/ngx-coding-components/src/lib/var-coding/single-code.component.html
+++ b/projects/ngx-coding-components/src/lib/var-coding/single-code.component.html
@@ -216,9 +216,9 @@
   } }
   <button
     mat-icon-button
-    (click)="duplicateCode(codeIndex)"
-    [disabled]="!canDuplicateCode()"
-    [matTooltip]="'varList.copy' | translate"
+    (click)="copySingleCode()"
+    [disabled]="!canCopySingleCode()"
+    [matTooltip]="'varList.copy-code' | translate"
   >
     <mat-icon>content_copy</mat-icon>
   </button>
